appId: ${APP_ID}
tags:
  - mail
  - manual
name: thread_delete_from_action_bar
---
- runFlow: ../../setup/sign_in.yaml
- assertVisible: "Inbox"
- tapOn:
    point: "50%,30%"
- waitForAnimationToEnd
- tapOn:
    id: "delete"
    optional: true
- runFlow:
    when:
      notVisible: "Inbox"
    commands:
      - tapOn:
          text: "Delete"
          optional: true
- waitForAnimationToEnd
- takeScreenshot: after_delete_thread
