appId: ${APP_ID}
tags:
  - search
  - manual
name: search_from_operator_tip
---
- runFlow: ../../setup/sign_in.yaml
- tapOn:
    id: "search"
    optional: true
- runFlow:
    when:
      notVisible: "Search"
    commands:
      - tapOn:
          text: "Search"
          optional: true
- waitForAnimationToEnd
- tapOn:
    text: "from:"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: search_from_operator
- back
